// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input,  when error is provideed -> should see error message 1`] = `
<div
  class="input-wrapper  customClass"
>
  <input
    class="input"
    id="testInputId"
    name="testInput"
    type="text"
    value=""
  />
  <div
    class="label-info "
  >
    <span
      class="label"
    >
      test text
    </span>
  </div>
</div>
`;

exports[`Input,  when focused -> label is on top 1`] = `
<Input
  className="customClass"
  id="testInputId"
  label="test text"
  name="testInput"
  type="text"
  value=""
>
  <div
    className="input-wrapper  customClass"
    onClick={[Function]}
  >
    <input
      className="input"
      id="testInputId"
      name="testInput"
      onChange={[Function]}
      type="text"
      value=""
    />
    <div
      className="label-info "
    >
      <span
        className="label"
      >
        test text
      </span>
    </div>
  </div>
</Input>
`;

exports[`Input,  when value is empty -> label is on bottom 1`] = `
<div
  class="input-wrapper  customClass"
>
  <input
    class="input"
    id="testInputId"
    name="testInput"
    type="text"
    value=""
  />
  <div
    class="label-info "
  >
    <span
      class="label"
    >
      test text
    </span>
  </div>
</div>
`;

exports[`Input,  when value provided -> label is on top 1`] = `
<div
  class="input-wrapper  customClass"
>
  <input
    class="input"
    id="testInputId"
    name="testInput"
    type="text"
    value="value is provided"
  />
  <div
    class="label-info filled"
  >
    <span
      class="label"
    >
      test text
    </span>
  </div>
</div>
`;
